--- a/index.html
+++ b/index.html
@@ -629,28 +629,7 @@
 				<div class="section-content">
 					<button onclick="news_prev(this)" class="arrow inactive" id="arrow-left">&lt</button>
 					<button onclick="news_next(this)" class="arrow" id="arrow-right">&gt</button>
-					<ul id="news-slider">
-						<!-- <li class="middle-item"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
-								<h1>パンケーキ襲来</h1>
-							</a>
-						</li>
-						<li class="right-item"><a href="./news/20221126.html">
-								<img src="./assets/images/news/20221126.png" alt="news thumbnail" loading="lazy">
-								<h1>パンケーキによる侵攻状況</h1>
-							</a>
-						</li>
-						<li class="hidden"><a href="./news/202211262.html">
-								<img src="./assets/images/news/202211262.png" alt="news thumbnail" loading="lazy">
-								<h1>Rinrin氏、シェーダーの壊滅に遺憾の意を表明</h1>
-							</a>
-						</li>
-						<li class="hidden"><a href="./news/202211263.html">
-								<img src="./assets/images/news/202211263.png" alt="news thumbnail" loading="lazy">
-								<h1>ﾃﾞｪｪｪｪｪﾝ</h1>
-							</a>
-						</li> -->
-					</ul>
+					<ul id="news-slider"></ul>
 				</div>
 				<a href="#team" class="dropdown-btn">▼</a>
 			</section>
