Remove:empty sections and their impls

--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 	</script>
 	<style>
 		body {
-			/* TODO: Set the background image finally ↓↓ */
-			background-image: url(https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png);
+			/* background-image: url(https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png); */
 			background-attachment: fixed;
 			background-size: cover;
 		}
@@ -185,10 +184,6 @@
 			font-weight: 1;
 			letter-spacing: .075em;
 			line-height: 1.5;
-		}
-
-		.empty-section {
-			height: 4vw;
 		}
 
 		#news .arrow {
@@ -617,10 +612,6 @@
 			</section>
 		</div>
 
-		<div class="container">
-			<section class="empty-section"></section>
-		</div>
-
 		<div class="container bg-default">
 			<section id="news">
 				<div class="section-title">
@@ -634,11 +625,6 @@
 				<a href="#team" class="dropdown-btn">▼</a>
 			</section>
 		</div>
-
-		<div class="container">
-			<section class="empty-section"></section>
-		</div>
-
 		<div class="container bg-default">
 			<section id="team">
 				<div class="section-title">
@@ -668,10 +654,6 @@
 			</section>
 		</div>
 
-		<div class="container">
-			<section class="empty-section"></section>
-		</div>
-
 		<div class="container bg-default">
 			<section id="store">
 				<div class="section-title">
@@ -680,10 +662,6 @@
 				<div class="section-content"></div>
 				<a href="#sponsor" class="dropdown-btn">▼</a>
 			</section>
-		</div>
-
-		<div class="container">
-			<section class="empty-section"></section>
 		</div>
 
 		<div class="container bg-default">
