--- a/index.html
+++ b/index.html
@@ -454,7 +454,36 @@
 			width: 38px;
 			transform: translateY(5px);
 		}
-		
+
+		#store img {
+			max-width: 86%;
+			border: 4px solid #65743b;
+		}
+
+		#store .go-to-store {
+			display: block;
+			max-width: 86%;
+			margin: 16px auto 0 auto;
+			text-decoration: none;
+			color: #d1ff46;
+			font-size: 24px;
+			font-weight: 900;
+			padding: 16px;
+			border: 4px solid #d1ff46;
+			transition: .4s;
+		}
+
+		#store .go-to-store:hover {
+			background-color: #d1ff46;
+			color: #1d1d1d;
+			box-shadow: 0 12px 0 #658111;
+		}
+
+		#store .go-to-store:active {
+			box-shadow: 0 3px 0 #658111;
+			transform: translateY(9px);
+		}
+
 		/* ▼ Contact modal ▼ */
 
 		#contact-modal {
@@ -648,7 +677,11 @@
 				<div class="section-title">
 					<h1>STORE</h1>
 				</div>
-				<div class="section-content"></div>
+				<div class="section-content">
+					<img src="https://media.discordapp.net/attachments/851587574631628831/1050400761487568966/kokesi.png"
+						alt="store thumbnail">
+					<a href="./store" class="go-to-store">お買い求めはこちら ></a>
+				</div>
 				<a href="#sponsor" class="dropdown-btn">▼</a>
 			</section>
 		</div>
