--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
 	<script src="./assets/scripts/member_list.js"></script>
 	<script src="./assets/scripts/news_slider.js"></script>
 	<script>
-		window.onload = function () {
-			fade_in_at_scroll(document.getElementsByClassName("section-title"));
+		window.onload = () => {
 			build_news_slider();
 			build_member_lists();
 			fuck_news_arrows();
+		};
+
+		window.onscroll = () => {
+			fade_in_at_scroll(document.getElementsByClassName("section-title"));
+			fade_in_at_scroll(document.getElementsByClassName("game-title"));
 		};
 
 		window.addEventListener("resize", function () {
@@ -119,6 +123,8 @@
 			display: block;
 			padding-top: 112px;
 			margin-top: -112px;
+			padding-left: 16px;
+			padding-right: 16px;
 		}
 
 		.dropdown-btn {
@@ -309,150 +315,66 @@
 		}
 
 		.game-title {
-			display: block;
-			padding: 16px;
-			width: 92%;
-			margin: 0 auto 24px auto;
-			background-color: white;
-			border: 6px solid #dae7eb;
-			color: black;
 			text-align: left;
 			font-size: 28px;
-			font-weight: 900;
-			transition: .5s;
-		}
-
-		.game-title:not(.active):hover {
-			transform: scale(1.05);
-		}
-
-		.game-title.active {
-			transform: scale(1.0);
-		}
-
-		.game-title.active {
-			background-color: #e3ff8e;
-			border: 6px solid #a3bd56;
-		}
-
-		.game-title.active:hover {
-			transform: scale(1.025);
-		}
-
-		.game-title::after {
-			content: "";
-			display: block;
-			width: .38em;
-			height: .38em;
-			float: right;
-			border-left: 4px solid black;
-			border-bottom: 4px solid black;
-			margin-right: 8px;
-			transform: rotateZ(-45deg);
-			margin-top: 10px;
-		}
-
-		.game-title.active::after {
-			transform: rotateZ(135deg);
-			margin-top: 14px;
+			border-bottom: 2px solid white;
+			width: 94%;
 		}
 
 		.member-list {
 			display: flex;
-			list-style: none;
-			width: 84%;
+			flex-wrap: wrap;
+			justify-content: center;
+			padding: 0;
 			margin: 0 auto;
-			background-color: #101010;
-			padding: 16px;
-			position: relative;
-			top: -24px;
-			border: #090909 5px solid;
-			overflow: hidden;
-			transform-origin: top;
-		}
-
-		.member-list.hide {
-			display: flex;
-			height: 0;
-			transform: rotateX(90deg);
-			animation: withdraw .2s ease-in;
-		}
-
-		@keyframes withdraw {
-			0% {
-				transform: rotateX(0deg);
-				height: 100%;
-			}
-
-			100% {
-				transform: rotateX(90deg);
-				height: 0;
-			}
-		}
-
-		.member-list.show {
-			display: block;
-			height: 100%;
-			transform: rotateX(0deg);
-			animation: dropDown .2s ease-out;
-		}
-
-		@keyframes dropDown {
-			0% {
-				transform: rotateX(90deg);
-			}
-
-			100% {
-				transform: rotateX(0deg);
-			}
 		}
 
 		.member-list li {
-			display: flexbox;
 			align-items: center;
-			margin: 16px auto;
-			width: 100%;
-		}
-
-		.member-list li::before {
-			content: "";
-			display: block;
-			width: 100%;
-			border: 1px solid #4a6072;
-			margin-bottom: 16px;
-		}
-
-		.member-icon {
-			width: 64px;
-			height: 64px;
-			border-radius: 50%;
-		}
-
-		.member-name {
-			margin: 0 16px;
-			font-size: 24px;
+			margin: 8px 6px;
+			width: 138px;
+			height: 224px;
+			background-color: #e3ff8e;
+			list-style: none;
+			border-radius: 4px;
+			border: 4px solid #a3bd56;
+			color: #3a490c;
 			font-weight: 900;
 		}
 
-		.member-link {
-			margin: 0 0 0 16px;
-			width: 48px;
-			height: 48px;
+		.member-list li>img {
+			width: 86px;
+			height: 86px;
+			border-radius: 50%;
+			margin: 20px auto;
+			border: 4px solid #a3bd56;
+			pointer-events: none;
+			user-select: none;
+		}
+
+		.member-list h3 {
+			font-size: 18px;
+			margin-top: -16px;
+		}
+
+		.member-list a {
 			text-decoration: none;
-			opacity: 0;
 		}
 
-		.member-link.show {
-			opacity: 1;
+		.member-list a img {
+			user-select: none;
 		}
 
-		.member-link img {
-			width: 48px;
+		.member-twitter img {
+			height: 26px;
+		}
+
+		.member-youtube img {
+			height: 24px;
 		}
 
 		.member-twitch img {
-			width: 38px;
-			transform: translateY(5px);
+			height: 28px;
 		}
 
 		#store img {
@@ -651,20 +573,16 @@
 				<div class="section-content">
 					<ul class="title-list">
 						<li>
-							<button onclick="toggle_member_list(this)" type="button"
-								class="game-title">FORTNITE</button>
-							<ul class="member-list hide" id="fortnite-member-list"></ul>
+							<h2 class="game-title">Fortnite</h2>
+							<ul class="member-list" id="fortnite-member-list"></ul>
 						</li>
 						<li>
-							<button onclick="toggle_member_list(this)" type="button" class="game-title">
-								APEX LEGENDS
-							</button>
-							<ul class="member-list hide" id="apex-member-list"></ul>
+							<h2 class="game-title">Apex Legends</h2>
+							<ul class="member-list" id="apex-member-list"></ul>
 						</li>
 						<li>
-							<button onclick="toggle_member_list(this)" type="button"
-								class="game-title">MINECRAFT</button>
-							<ul class="member-list hide" id="minecraft-member-list"></ul>
+							<h2 class="game-title">Minecraft</h2>
+							<ul class="member-list" id="minecraft-member-list"></ul>
 						</li>
 					</ul>
 				</div>
