--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
 			margin: 8px 6px;
 			width: 138px;
 			height: 224px;
-			background-color: #e3ff8e;
+			background-color: #e6e6e6;
 			list-style: none;
 			border-radius: 4px;
-			border: 4px solid #a3bd56;
+			border: 4px solid #c0c0c0;
 			color: #3a490c;
 			font-weight: 900;
 		}
@@ -347,7 +347,7 @@
 			height: 86px;
 			border-radius: 50%;
 			margin: 20px auto;
-			border: 4px solid #a3bd56;
+			border: 4px solid #c0c0c0;
 			pointer-events: none;
 			user-select: none;
 		}
@@ -526,14 +526,12 @@
 
 	<main>
 		<div class="container bg-default">
-			<section style="margin-top:192px;">
-				<div style="max-width:384px;margin:0 auto;">
-					<img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"
-						class="no-pointer-events fade-in-bottom" style="width:100%;height:100%;object-fit:cover;">
-				</div>
-				<h1 style="font-size:64px;">REVATI</h1>
-				<a href="#about" class="dropdown-btn">▼</a>
-			</section>
+			<div style="height:90vh;display:block;">
+				<video src="./assets/videos/revati_op_muted.mov"
+					style="width:100%;height:100%;object-fit:cover;border-bottom:6px solid #0f1208;" muted autoplay
+					playsinline loop></video>
+			</div>
+			<a href="#about" class="dropdown-btn">▼</a>
 		</div>
 
 		<div class="container bg-default">
