--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
 		<div class="container bg-default">
 			<div style="height:90vh;display:block;">
 				<video src="./assets/videos/revati_op_muted.mov"
-					style="width:100%;height:100%;object-fit:cover;border-bottom:6px solid #0f1208;" muted autoplay
-					playsinline loop></video>
+					style="width:100%;height:100%;object-fit:cover;" muted autoplay
+					playsinline loop></video> <!-- border-bottom:6px solid #0f1208; -->
 			</div>
 			<a href="#about" class="dropdown-btn">▼</a>
 		</div>
