--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
 			background-size: cover;
 		}
 
+		#op-container {
+			display: block;
+			height: 90vh;
+		}
+
+		#op-video {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+
 		.container {
 			width: 100%;
 		}
@@ -526,10 +537,8 @@
 
 	<main>
 		<div class="container bg-default">
-			<div style="height:90vh;display:block;">
-				<video src="./assets/videos/revati_op_muted.mov"
-					style="width:100%;height:100%;object-fit:cover;" muted autoplay
-					playsinline loop></video> <!-- border-bottom:6px solid #0f1208; -->
+			<div id="op-container">
+				<video src="./assets/videos/revati_op_muted.mov" id="op-video" muted autoplay playsinline loop></video>
 			</div>
 			<a href="#about" class="dropdown-btn">▼</a>
 		</div>
