--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
 
 		function op_loop(video) {
 			let container = document.getElementById("op-container").style;
-			container.backgroundImage = "url(./assets/images/logos/revati_large.png)";
-			container.borderColor = "#d1ff46";
+			container.backgroundImage = "url(./assets/images/logos/revati_large_dark.png)";
 			video.style.opacity = 0;
 			setTimeout(() => {
 				video.style.opacity = 1;
 				video.play();
-				container.borderColor = "#00000000";
 				container.backgroundImage = "none";
 			}, 5000);
 		}
@@ -119,7 +117,6 @@
 			background-image: none;
 			background-repeat: no-repeat;
 			background-position: center;
-			border-bottom: 12px solid #00000000;
 		}
 
 		#op-video {
@@ -554,8 +551,12 @@
 	<main>
 		<div class="container bg-default">
 			<div id="op-container">
-				<video src="./assets/videos/revati_op_muted.mov" id="op-video" onended="op_loop(this)" muted autoplay
-					playsinline></video>
+				<video src="./assets/videos/revati_op_muted.mov" id="op-video" onended="op_loop(this)" 
+					muted autoplay playsinline
+				></video>
+				<!-- <video src="./assets/videos/old3_revati_op_muted.mov" id="op-video" onended="op_loop(this)" 
+					muted autoplay playsinline loop
+				></video> -->
 			</div>
 			<a href="#about" class="dropdown-btn">▼</a>
 		</div>
