Fix:news hrevsize

--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
 			text-decoration: none;
 			color: white;
 			display: block;
+			max-width: 753px;
+			margin: 0 auto;
 		}
 
 		#news li img {
