Improve:formatted / set the contact link / all fonts is now loaded from assets directory Fix:selection box of the dropdown button was incorrect in news section Add:author Update:header font Delete:unused font file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="theme-color" content="#d1ff46">
 
 	<meta name="keywords" content="revati">
-	<meta name="author" content="Rinrin.rs">
+	<meta name="author" content="Rinrin.rs, GEN3987">
 	<meta name="copyright" content="© 2022 REVATI">
 
 	<!-- ▲ Global head ▲ -->
@@ -583,9 +583,8 @@
 	<main>
 		<div class="container bg-default">
 			<div id="op-container">
-				<video src="./assets/videos/revati_op_muted.mov" id="op-video" onended="op_loop(this)" 
-					muted autoplay playsinline
-				></video>
+				<video src="./assets/videos/revati_op_muted.mov" id="op-video" onended="op_loop(this)" muted autoplay
+					playsinline></video>
 				<!-- <video src="./assets/videos/old3_revati_op_muted.mov" id="op-video" onended="op_loop(this)" 
 					muted autoplay playsinline loop
 				></video> -->
@@ -619,7 +618,7 @@
 					<button onclick="news_next(this)" class="arrow" id="arrow-right">&gt</button>
 					<ul id="news-slider"></ul>
 				</div>
-				<a href="#team" class="dropdown-btn">▼</a>
+				<a href="#team" class="dropdown-btn" style="margin-top:16px;">▼</a>
 			</section>
 		</div>
 		<div class="container bg-default">
@@ -686,8 +685,8 @@
 			※返答までにお時間をいただく場合がございます。<br>
 			※お答えできない場合がございます。
 		</p>
-		<!-- TODO: Prepare the google form -->
-		<a href="#" id="mail-btn" draggable="false">
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSd9P3VCWiCrOpHAvsQpjwZBBLMlznJP4ZW-KWs7rzxXu1ZTMg/viewform?usp=pp_url"
+			id="mail-btn" target="_blank" draggable="false">
 			メールを送る
 		</a>
 	</div>
