--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				video.style.opacity = 1;
 				video.play();
 				container.backgroundImage = "none";
-			}, 5000);
+			}, 16000);
 		}
 	</script>
 	<style>
@@ -407,6 +407,7 @@
 
 		.member-list a {
 			text-decoration: none;
+			margin: 0 4px;
 		}
 
 		.member-list a img {
@@ -415,6 +416,7 @@
 
 		.member-twitter img {
 			height: 26px;
+			transform: translateY(2px);
 		}
 
 		.member-youtube img {
@@ -422,7 +424,8 @@
 		}
 
 		.member-twitch img {
-			height: 28px;
+			height: 30px;
+			transform: translateY(4px);
 		}
 
 		#store img {
