Fix:gen.png resolusion / Addstreamer title

--- a/index.html
+++ b/index.html
@@ -643,6 +643,10 @@
 							<h2 class="game-title">Minecraft</h2>
 							<ul class="member-list" id="minecraft-member-list"></ul>
 						</li>
+						<li>
+							<h2 class="game-title">Streamer</h2>
+							<ul class="member-list" id="streamer-member-list"></ul>
+						</li>
 					</ul>
 				</div>
 				<a href="#store" class="dropdown-btn">▼</a>
