Add:owner section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		};
 
 		window.onscroll = () => {
-			fade_in_at_scroll(document.getElementsByClassName("game-title"));
+			fade_in_at_scroll(document.getElementsByClassName("team-classes-title"));
 		};
 
 		window.addEventListener("resize", function () {
@@ -363,7 +363,7 @@
 			padding-left: 0;
 		}
 
-		.game-title {
+		.team-classes-title {
 			text-align: left;
 			font-size: 28px;
 			border-bottom: 2px solid white;
@@ -633,20 +633,24 @@
 				<div class="section-content">
 					<ul class="title-list">
 						<li>
-							<h2 class="game-title">Fortnite</h2>
+							<h2 class="team-classes-title">Fortnite</h2>
 							<ul class="member-list" id="fortnite-member-list"></ul>
 						</li>
 						<li>
-							<h2 class="game-title">Apex Legends</h2>
+							<h2 class="team-classes-title">Apex Legends</h2>
 							<ul class="member-list" id="apex-member-list"></ul>
 						</li>
 						<li>
-							<h2 class="game-title">Minecraft</h2>
+							<h2 class="team-classes-title">Minecraft</h2>
 							<ul class="member-list" id="minecraft-member-list"></ul>
 						</li>
 						<li>
-							<h2 class="game-title">Streamer</h2>
+							<h2 class="team-classes-title">Streamer</h2>
 							<ul class="member-list" id="streamer-member-list"></ul>
+						</li>
+						<li>
+							<h2 class="team-classes-title">Owner</h2>
+							<ul class="member-list" id="owner-member-list"></ul>
 						</li>
 					</ul>
 				</div>
