--- a/src/app.html
+++ b/src/app.html
@@ -23,7 +23,7 @@
 	<meta name="author" content="Rinrin.rs <rinrin0413.valley@gmail.com>, GEN3987">
 	<meta name="copyright" content="© 2022 - 2023 REVATI">
 
-	<link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
+	<link rel="icon" href="%sveltekit.assets%/images/logos/REVATI_LOGO_BLK_2_square.png" />
 	<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/global.css" />
 	<script src="%sveltekit.assets%/scripts/script.js"></script>
 
