Update:tmp site url Fix:other assets path was killed

--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 	<meta property="og:locale" content="ja_JP">
 	<meta name="twitter:card" content="summary_large_image">
 	<!-- TODO: Input the link to index ↓↓  -->
-	<meta name="twitter:site" content="https://sarf-esports.github.io/website">
+	<meta name="twitter:site" content="https://revati.pages.dev">
 	<meta name="theme-color" content="#d1ff46">
 
 	<meta name="keywords" content="sarf,revati">
