Update:README.md / site link / copyright Add:new two todo Impl:header component (WIP) Delete:static/ Fix:function `fuck_news_arrows` was not working correctly Move:contact modal-related functions to `/contact_modal.js` Improve:refactored head

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!-- © 2022 REVATI -->
+<!-- © 2022 - 2023 REVATI -->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -10,13 +10,10 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<meta property="og:site_name" content="REVATI">
-	<!-- TODO: Input the absolute path of the favicon ↓↓-->
-	<meta property="og:image"
-		content="https://media.discordapp.net/attachments/851587574631628831/1043884225079812166/IMG_7664.jpg">
+	<meta property="og:image" content="https://revati.jp/images/logos/revati_large.png">
 	<meta property="og:locale" content="ja_JP">
 	<meta name="twitter:card" content="summary_large_image">
-	<!-- TODO: Input the link to index ↓↓  -->
-	<meta name="twitter:site" content="https://revati.pages.dev">
+	<meta name="twitter:site" content="https://revati.jp">
 	<meta name="theme-color" content="#d1ff46">
 
 	<meta name="keywords" content="sarf,revati">
