--- a/src/app.html
+++ b/src/app.html
@@ -29,6 +29,7 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
+	<script src="/scripts/blockreveal/main.js"></script>
 </body>
 
 </html>
