--- a/src/app.html
+++ b/src/app.html
@@ -28,8 +28,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-	<script src="/scripts/blockreveal/main.js"></script>
+	%sveltekit.body%
 </body>
 
 </html>
