--- a/src/app.html
+++ b/src/app.html
@@ -4,21 +4,21 @@
 <html lang="ja">
 
 <head prefix="og:http://ogp.me/ns#">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="format-detection" content="telephone=no">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="format-detection" content="telephone=no,address=no,email=no" />
 
-	<meta property="og:site_name" content="REVATI">
-	<meta property="og:image" content="https://revati.jp/images/logos/revati_large.png">
-	<meta property="og:locale" content="ja_JP">
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="https://revati.jp">
-	<meta name="theme-color" content="#d1ff46">
+	<meta property="og:site_name" content="REVATI" />
+	<meta property="og:image" content="https://revati.jp/images/logos/revati_large.png" />
+	<meta property="og:locale" content="ja_JP" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="https://revati.jp" />
+	<meta name="theme-color" content="#d1ff46" />
 
-	<meta name="keywords" content="sarf,revati">
-	<meta name="author" content="Rinrin.rs <rinrin0413.valley@gmail.com>, GEN3987">
-	<meta name="copyright" content="© 2022 - 2023 REVATI">
+	<meta name="keywords" content="sarf,revati" />
+	<meta name="author" content="Rinrin.rs <rinrin0413.valley@gmail.com>, GEN3987" />
+	<meta name="copyright" content="© 2022 - 2023 REVATI" />
 
 	<link rel="icon" href="%sveltekit.assets%/images/logos/REVATI_LOGO_BLK_2_square.png" />
 	<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/app.css" />
