Improve:completely optimized for SvelteKit / refactored stylesheets in `+page.svelte>style` Delete:style.scss Move:style `app.css>::section` to `+page.svelte>style` Rename:app.css -> global.css

--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 	<meta name="copyright" content="© 2022 - 2023 REVATI" />
 
 	<link rel="icon" href="%sveltekit.assets%/images/logos/REVATI_LOGO_BLK_2_square.png" />
-	<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/app.css" />
+	<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/global.css" />
 	<script src="%sveltekit.assets%/scripts/script.js"></script>
 
 	%sveltekit.head%
