--- a/src/app.html
+++ b/src/app.html
@@ -2,20 +2,18 @@
 
 <!DOCTYPE html>
 <html lang="ja">
+	<head prefix="og:http://ogp.me/ns#">
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<head prefix="og:http://ogp.me/ns#">
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="icon" href="%sveltekit.assets%/images/logos/REVATI_LOGO_BLK_2_square.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/global.css" />
+		<script src="%sveltekit.assets%/scripts/script.js"></script>
 
-	<link rel="icon" href="%sveltekit.assets%/images/logos/REVATI_LOGO_BLK_2_square.png" />
-	<link rel="stylesheet" href="%sveltekit.assets%/stylesheets/global.css" />
-	<script src="%sveltekit.assets%/scripts/script.js"></script>
+		%sveltekit.head%
+	</head>
 
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display:contents;">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
