✨ Add: meta tag for Google site verification

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,8 @@
 		<script src="%sveltekit.assets%/scripts/script.js"></script>
 
 		%sveltekit.head%
+
+		<meta name="google-site-verification" content="Y2_5HsUC4aF517HYkAql5TlhdGr3d9yRpO3VKu9uBFw" />
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
