--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <!-- © 2022 REVATI -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 	<head prefix="og:http://ogp.me/ns#">
 		<meta charset="utf-8" />
