🎨 Add: website information to source top

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,7 @@
-<!-- © 2022 REVATI -->
+<!--
+	© 2022 - 2024 REVATI
+	Repository: https://github.com/Sarf-Esports/website
+-->
 <!doctype html>
 <html lang="ja">
 	<head prefix="og:http://ogp.me/ns#">
