🛠️ Update: GitHub organization ID

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <!--
 	© 2022 - 2026 REVATI | BSD-3-Clause
-	Repository: https://github.com/Sarf-Esports/website
+	Repository: https://github.com/revati-jp/website
 -->
 <!doctype html>
 <html lang="ja">
